--- a/mobile/src/main/res/layout/content_main.xml
+++ b/mobile/src/main/res/layout/content_main.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="pt.unl.fct.di.novalincs.yanuxscavenger.MainActivity"
+    tools:context="pt.unl.fct.di.novalincs.scavenger.MainActivity"
     tools:showIn="@layout/activity_main"
     android:fillViewport="false">
     <LinearLayout
