--- a/mobile/src/main/res/menu/menu_main.xml
+++ b/mobile/src/main/res/menu/menu_main.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="pt.unl.fct.di.novalincs.scavenger.MainActivity">
     <item
+        android:id="@+id/action_sensors"
+        android:orderInCategory="100"
+        android:title="@string/action_sensors"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
