--- a/mobile/src/main/res/layout/activity_sensors.xml
+++ b/mobile/src/main/res/layout/activity_sensors.xml
@@ -22,10 +22,18 @@
     tools:context="pt.unl.fct.di.novalincs.yanux.scavenger.SensorsActivity">
 
     <Spinner
+        android:id="@+id/spinner_sensors"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner_sensors"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentTop="true" />
+
+    <TextView
+        android:id="@+id/sensor_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/spinner_sensors"
+        android:text="New Text" />
 </RelativeLayout>
+
