--- a/mobile/src/main/res/layout/activity_sensors.xml
+++ b/mobile/src/main/res/layout/activity_sensors.xml
@@ -20,20 +20,104 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="pt.unl.fct.di.novalincs.yanux.scavenger.SensorsActivity">
-
-    <Spinner
-        android:id="@+id/spinner_sensors"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
-
     <TextView
-        android:id="@+id/sensor_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/select_sensor"
+        android:id="@+id/select_sensor_label"
+        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/spinner_sensors"
-        android:text="New Text" />
+        android:textStyle="bold" />
+    <Spinner
+        android:id="@+id/select_sensor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/select_sensor_label"
+        android:layout_alignParentStart="true" />
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/select_sensor"
+        android:layout_alignParentStart="true"
+        android:columnCount="2"
+        android:layout_marginTop="8dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sensor_name"
+            android:id="@+id/sensor_name_label"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/sensor_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sensor_vendor"
+            android:id="@+id/sensor_vendor_label"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/sensor_vendor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sensor_version"
+            android:id="@+id/sensor_version_label"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/sensor_version"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sensor_resolution"
+            android:id="@+id/sensor_resolution_label"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/sensor_resolution"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sensor_max_range"
+            android:id="@+id/sensor_max_range_label"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/sensor_max_range"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sensor_min_delay"
+            android:id="@+id/sensor_min_delay_label"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/sensor_min_delay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sensor_power"
+            android:id="@+id/sensor_power_label"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/sensor_power"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp" />
+    </GridLayout>
 </RelativeLayout>
 
