--- a/mobile/src/main/res/layout/activity_sensors.xml
+++ b/mobile/src/main/res/layout/activity_sensors.xml
@@ -21,31 +21,31 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="pt.unl.fct.di.novalincs.yanux.scavenger.SensorsActivity">
     <TextView
+        android:id="@+id/select_sensor_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/select_sensor"
-        android:id="@+id/select_sensor_label"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="@string/select_sensor"
         android:textStyle="bold" />
     <Spinner
         android:id="@+id/select_sensor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/select_sensor_label"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/select_sensor_label" />
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/select_sensor"
         android:layout_alignParentStart="true"
-        android:columnCount="2"
-        android:layout_marginTop="8dp">
+        android:layout_below="@+id/select_sensor"
+        android:layout_marginTop="8dp"
+        android:columnCount="2">
         <TextView
+            android:id="@+id/sensor_name_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sensor_name"
-            android:id="@+id/sensor_name_label"
             android:textStyle="bold" />
         <TextView
             android:id="@+id/sensor_name"
@@ -53,10 +53,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp" />
         <TextView
+            android:id="@+id/sensor_vendor_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sensor_vendor"
-            android:id="@+id/sensor_vendor_label"
             android:textStyle="bold" />
         <TextView
             android:id="@+id/sensor_vendor"
@@ -64,10 +64,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp" />
         <TextView
+            android:id="@+id/sensor_version_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sensor_version"
-            android:id="@+id/sensor_version_label"
             android:textStyle="bold" />
         <TextView
             android:id="@+id/sensor_version"
@@ -75,10 +75,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp" />
         <TextView
+            android:id="@+id/sensor_resolution_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sensor_resolution"
-            android:id="@+id/sensor_resolution_label"
             android:textStyle="bold" />
         <TextView
             android:id="@+id/sensor_resolution"
@@ -86,10 +86,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp" />
         <TextView
+            android:id="@+id/sensor_max_range_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sensor_max_range"
-            android:id="@+id/sensor_max_range_label"
             android:textStyle="bold" />
         <TextView
             android:id="@+id/sensor_max_range"
@@ -97,10 +97,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp" />
         <TextView
+            android:id="@+id/sensor_min_delay_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sensor_min_delay"
-            android:id="@+id/sensor_min_delay_label"
             android:textStyle="bold" />
         <TextView
             android:id="@+id/sensor_min_delay"
@@ -108,16 +108,51 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp" />
         <TextView
+            android:id="@+id/sensor_power_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sensor_power"
-            android:id="@+id/sensor_power_label"
             android:textStyle="bold" />
         <TextView
             android:id="@+id/sensor_power"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp" />
+        <TextView
+            android:id="@+id/sensor_accuracy_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sensor_accuracy"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/sensor_accuracy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:typeface="monospace" />
+        <TextView
+            android:id="@+id/sensor_timestamp_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/timestamp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/sensor_timestamp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp" />
+        <TextView
+            android:id="@+id/sensor_values_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sensor_values"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/sensor_values"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:typeface="monospace" />
     </GridLayout>
 </RelativeLayout>
 
