--- a/mobile/src/main/res/layout/content_main.xml
+++ b/mobile/src/main/res/layout/content_main.xml
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <TextView
+        <!-- <TextView
             android:id="@+id/text_wifi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -45,6 +45,6 @@
             android:id="@+id/text_wifi_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Wi-Fi List" />
+            android:text="Wi-Fi List" /> -->
     </LinearLayout>
 </ScrollView>
