--- a/mobile/src/main/res/layout/content_main.xml
+++ b/mobile/src/main/res/layout/content_main.xml
@@ -11,7 +11,7 @@
   ~ You should have received a copy of the GNU General Public License along with YanuX Scavenger.  If not, see <https://www.gnu.org/licenses/gpl.html>
   -->
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -24,27 +24,14 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="pt.unl.fct.di.novalincs.scavenger.MainActivity"
     tools:showIn="@layout/activity_main">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
         <TextView
             android:id="@+id/text_output"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <!-- <TextView
-            android:id="@+id/text_wifi"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Wi-Fi"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="0dp"
+            android:text="@string/app_name"
             android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <TextView
-            android:id="@+id/text_wifi_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Wi-Fi List" /> -->
-    </LinearLayout>
-</ScrollView>
+</RelativeLayout>
