--- a/mobile/src/main/res/layout/activity_wifi.xml
+++ b/mobile/src/main/res/layout/activity_wifi.xml
@@ -21,11 +21,54 @@
     tools:context="pt.unl.fct.di.novalincs.yanux.scavenger.WifiActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/wifi_connection_info_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:text="@string/wifi_connection_info"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/wifi_connection_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/wifi_connection_info_title" />
+
+    <TextView
+        android:id="@+id/wifi_dhcp_info_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/wifi_connection_info"
+        android:text="@string/wifi_dhcp_info"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/wifi_dhcp_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/wifi_dhcp_info_title"
+        android:text="New Text" />
+
+    <TextView
+        android:id="@+id/wifi_access_points_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/wifi_dhcp_info"
         android:text="@string/wifi_access_points"
         android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <ListView
+        android:id="@+id/wifi_access_points"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/wifi_access_points_title" />
+
+
+
 </RelativeLayout>
