--- a/mobile/src/main/res/layout/activity_wifi.xml
+++ b/mobile/src/main/res/layout/activity_wifi.xml
@@ -10,6 +10,7 @@
   ~ You should have received a copy of the GNU General Public License along with YanuX Scavenger.  If not, see <https://www.gnu.org/licenses/gpl.html>
   -->
 
+<!-- TODO: Make the scrollable to make it usable on smaller screens -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -27,14 +28,15 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:text="@string/wifi_connection_info"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
         android:id="@+id/wifi_connection_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/wifi_connection_info_title" />
+        android:layout_below="@+id/wifi_connection_info_title"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
         android:id="@+id/wifi_dhcp_info_title"
@@ -43,7 +45,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/wifi_connection_info"
         android:text="@string/wifi_dhcp_info"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
         android:id="@+id/wifi_dhcp_info"
@@ -51,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/wifi_dhcp_info_title"
-        android:text="New Text" />
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
         android:id="@+id/wifi_access_points_title"
@@ -60,7 +62,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/wifi_dhcp_info"
         android:text="@string/wifi_access_points"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <ListView
         android:id="@+id/wifi_access_points"
@@ -68,7 +70,5 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/wifi_access_points_title" />
-
-
 
 </RelativeLayout>
