--- a/mobile/src/main/res/menu/menu_main.xml
+++ b/mobile/src/main/res/menu/menu_main.xml
@@ -25,6 +25,11 @@
         android:title="@string/action_wifi"
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_bluetooth_classic"
+        android:orderInCategory="100"
+        android:title="@string/action_bluetooth_classic"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
