--- a/mobile/src/main/res/layout/content_main.xml
+++ b/mobile/src/main/res/layout/content_main.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2016 Pedro Albuquerque Santos.
   ~
   ~ This file is part of YanuX Scavenger.
@@ -24,14 +23,15 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="pt.unl.fct.di.novalincs.scavenger.MainActivity"
     tools:showIn="@layout/activity_main">
-        <TextView
-            android:id="@+id/text_output"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="0dp"
-            android:text="@string/app_name"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/text_output"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/app_name"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 </RelativeLayout>
