--- a/mobile/src/main/res/layout/activity_bluetooth_le.xml
+++ b/mobile/src/main/res/layout/activity_bluetooth_le.xml
@@ -18,7 +18,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="pt.unl.fct.di.novalincs.yanux.scavenger.bluetooth_leLeActivity">
+    tools:context="pt.unl.fct.di.novalincs.yanux.scavenger.BluetoothLeActivity">
 
     <TextView
         android:id="@+id/bluetooth_le_name_label"
