- Basic logging working - More improvements needed

--- a/mobile/src/main/res/layout/activity_wifi.xml
+++ b/mobile/src/main/res/layout/activity_wifi.xml
@@ -54,4 +54,12 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/wifi_access_points_title" />
 
+    <ToggleButton
+        android:id="@+id/wifi_log_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:text="@string/log_button" />
+
 </RelativeLayout>
