--- a/mobile/src/main/res/layout/activity_wifi.xml
+++ b/mobile/src/main/res/layout/activity_wifi.xml
@@ -21,12 +21,37 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="pt.unl.fct.di.novalincs.yanux.scavenger.WifiActivity">
 
+    <Switch
+        android:id="@+id/log_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="@string/log" />
+
+    <TextView
+        android:id="@+id/log_sample_counter_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/log_switch"
+        android:text="@string/log_sample_counter"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/log_sample_counter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/log_sample_counter_label"
+        android:layout_marginLeft="8dp"
+        android:layout_toEndOf="@+id/log_sample_counter_label" />
+
     <TextView
         android:id="@+id/wifi_connection_info_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/log_sample_counter_label"
         android:text="@string/wifi_connection_info"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -53,13 +78,5 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/wifi_access_points_title" />
-
-    <ToggleButton
-        android:id="@+id/wifi_log_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:text="@string/log_button" />
 
 </RelativeLayout>
