- Many improvements, bugfixes and some refactoring

--- a/mobile/src/main/res/layout/fragment_log_dialog.xml
+++ b/mobile/src/main/res/layout/fragment_log_dialog.xml
@@ -15,7 +15,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="pt.unl.fct.di.novalincs.yanux.scavenger.LogDialogFragment">
+    tools:context=".dialog.logging.LogDialogFragment">
 
     <TextView
         android:id="@+id/log_name_label"
