--- a/mobile/src/main/res/layout/activity_beacon.xml
+++ b/mobile/src/main/res/layout/activity_beacon.xml
@@ -18,7 +18,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="pt.unl.fct.di.novalincs.yanux.scavenger.BeaconActivity">
+    tools:context=".activity.beacon.BeaconActivity">
 
     <TextView
         android:id="@+id/beacon_ranging_elapsed_time_label"
