--- a/mobile/src/main/res/layout/activity_bluetooth_classic.xml
+++ b/mobile/src/main/res/layout/activity_bluetooth_classic.xml
@@ -18,7 +18,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="pt.unl.fct.di.novalincs.yanux.scavenger.BluetoothClassicActivity">
+    tools:context=".activity.bluetooth.BluetoothClassicActivity">
 
     <TextView
         android:id="@+id/bluetooth_name_label"
