--- a/mobile/src/main/res/layout/activity_sensors.xml
+++ b/mobile/src/main/res/layout/activity_sensors.xml
@@ -18,7 +18,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="pt.unl.fct.di.novalincs.yanux.scavenger.SensorsActivity">
+    tools:context=".activity.sensors.SensorsActivity">
 
     <TextView
         android:id="@+id/select_sensor_label"
