--- a/mobile/src/main/res/layout/activity_wifi.xml
+++ b/mobile/src/main/res/layout/activity_wifi.xml
@@ -19,7 +19,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="pt.unl.fct.di.novalincs.yanux.scavenger.WifiActivity">
+    tools:context=".activity.wifi.WifiActivity">
 
     <Switch
         android:id="@+id/log_switch"
