--- a/mobile/src/main/res/layout/content_main.xml
+++ b/mobile/src/main/res/layout/content_main.xml
@@ -21,7 +21,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="pt.unl.fct.di.novalincs.scavenger.MainActivity"
+    tools:context=".activity.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <TextView
@@ -32,6 +32,6 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="0dp"
         android:layout_marginTop="0dp"
-        android:text="@string/app_name"
+        android:text="@string/title_activity_main"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 </RelativeLayout>
