--- a/mobile/src/main/res/layout/fragment_log_dialog.xml
+++ b/mobile/src/main/res/layout/fragment_log_dialog.xml
@@ -26,7 +26,8 @@
     <EditText
         android:id="@+id/log_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:singleLine="true" />
 
     <TextView
         android:id="@+id/log_samples_label"
