--- a/mobile/src/main/res/layout/activity_bluetooth_classic.xml
+++ b/mobile/src/main/res/layout/activity_bluetooth_classic.xml
@@ -10,79 +10,28 @@
   ~ You should have received a copy of the GNU General Public License along with YanuX Scavenger.  If not, see <https://www.gnu.org/licenses/gpl.html>
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:fitsSystemWindows="true"
     tools:context=".activity.bluetooth.BluetoothClassicActivity">
 
-    <TextView
-        android:id="@+id/bluetooth_name_label"
-        android:layout_width="wrap_content"
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:text="@string/bluetooth_name"
-        android:textStyle="bold" />
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-    <TextView
-        android:id="@+id/bluetooth_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/bluetooth_address" />
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    <TextView
-        android:id="@+id/bluetooth_address_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/bluetooth_name_label"
-        android:text="@string/bluetooth_address"
-        android:textStyle="bold" />
+    </android.support.design.widget.AppBarLayout>
 
-    <TextView
-        android:id="@+id/bluetooth_address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/bluetooth_discovery_elapsed_time"
-        android:layout_alignStart="@+id/bluetooth_discovery_elapsed_time" />
+    <include layout="@layout/content_bluetooth_classic" />
 
-    <TextView
-        android:id="@+id/bluetooth_discovery_elapsed_time_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/bluetooth_address_label"
-        android:text="@string/bluetooth_discovery_elapsed_time"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/bluetooth_discovery_elapsed_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/bluetooth_devices_label"
-        android:layout_marginLeft="8dp"
-        android:layout_toEndOf="@+id/bluetooth_discovery_elapsed_time_label" />
-
-    <ListView
-        android:id="@+id/bluetooth_devices"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/bluetooth_devices_label" />
-
-    <TextView
-        android:id="@+id/bluetooth_devices_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/bluetooth_discovery_elapsed_time_label"
-        android:text="@string/bluetooth_devices"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
