--- a/mobile/src/main/res/layout/activity_sensors.xml
+++ b/mobile/src/main/res/layout/activity_sensors.xml
@@ -10,171 +10,28 @@
   ~ You should have received a copy of the GNU General Public License along with YanuX Scavenger.  If not, see <https://www.gnu.org/licenses/gpl.html>
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:fitsSystemWindows="true"
     tools:context=".activity.sensors.SensorsActivity">
 
-    <TextView
-        android:id="@+id/select_sensor_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:text="@string/select_sensor"
-        android:textStyle="bold" />
-
-    <Spinner
-        android:id="@+id/select_sensor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/select_sensor_label" />
-
-    <GridLayout
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/select_sensor"
-        android:layout_marginTop="8dp"
-        android:columnCount="2">
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <TextView
-            android:id="@+id/sensor_name_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sensor_name"
-            android:textStyle="bold" />
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-        <TextView
-            android:id="@+id/sensor_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp" />
+    </android.support.design.widget.AppBarLayout>
 
-        <TextView
-            android:id="@+id/sensor_vendor_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sensor_vendor"
-            android:textStyle="bold" />
+    <include layout="@layout/content_sensors" />
 
-        <TextView
-            android:id="@+id/sensor_vendor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp" />
-
-        <TextView
-            android:id="@+id/sensor_version_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sensor_version"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/sensor_version"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp" />
-
-        <TextView
-            android:id="@+id/sensor_resolution_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sensor_resolution"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/sensor_resolution"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp" />
-
-        <TextView
-            android:id="@+id/sensor_max_range_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sensor_max_range"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/sensor_max_range"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp" />
-
-        <TextView
-            android:id="@+id/sensor_min_delay_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sensor_min_delay"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/sensor_min_delay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp" />
-
-        <TextView
-            android:id="@+id/sensor_power_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sensor_power"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/sensor_power"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp" />
-
-        <TextView
-            android:id="@+id/sensor_accuracy_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sensor_accuracy"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/sensor_accuracy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:typeface="monospace" />
-
-        <TextView
-            android:id="@+id/sensor_timestamp_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/timestamp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/sensor_timestamp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp" />
-
-        <TextView
-            android:id="@+id/sensor_values_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sensor_values"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/sensor_values"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:typeface="monospace" />
-    </GridLayout>
-</RelativeLayout>
-
+</android.support.design.widget.CoordinatorLayout>
