- Refactored the whole logging process to make it more stream lined. I still need to test a few edge cases and see how will I deal with polymorphism...

--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
   -->
 
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#e58b53</color>
+    <color name="colorPrimaryDark">#e2794e</color>
+    <color name="colorAccent">#d63a7c</color>
 </resources>
